[workspace]

members = [
    "actixasync",
    "actixcomplex/backend",
    "actixfileupload",
    "actixssl",
    "async-std",
    "hyper",
    "hyperssl",
    "warp",
    "warpssl",
    "parser",
    "tokio-async",
]

exclude = [
    "actixcomplex/frontendyew"
]

# Optimized for size
# release: 514.6
# optimized: 

#[cfg(target_arch = "wasm32")]
# [profile.'cfg(target_arch = "wasm32")'.release]
# [profile.'cfg(target_arch = "wasm32")'.release]

# [profile.dev.package.hyper]
# opt-level = 3
