[package]
name = "actix-jwt"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
futures = "0.3"
r2d2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
actix-service = "1.0"
alcoholic_jwt = "1.0"
reqwest = "0.10"
actix-rt = "1.1"
