[package]
name = "actixcomplex"
version = "0.1.0"
authors = [" <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.7.1"
log = "0.4.8"
# Command line application
# clap = "2.33.0"
ctrlc = "3.1.3"

# Server 
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-web-httpauth = "0.4.0"
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.1"
openssl = "0.10.26"

# Serializers
serde = "1.0.104"
