[package]
name = "actixfileupload"
version = "0.3.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Actix Web with Async/Await"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/actix/examples"
readme = "README.md"

[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"

# Server
futures = "0.3"
actix-multipart = "0.3"
actix-web = "3.1"
actix-rt = "2.1"
async-std = "1.6"
