[package]
name = "actixfileupload"
version = "0.3.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Actix Web with Async/Await"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/actix/examples"
readme = "README.md"

[dependencies]
# Loggings
env_logger = "0.9"
log = "0.4"

# Server
futures = "0.3"
actix-multipart = "0.5"
actix-web = "4.0"
futures-util = "0.3"
async-std = "1.6"
