[package]
name = "actixrustls"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"
# Command line application
# clap = "2.33.0"
ctrlc = "3.1"

actix-web = { version = "3.3", features = ["rustls"] }
rustls = "0.19"
actix-rt = "1.1"
# tokio = { version = "0.2.9", features = ["full"] }
# futures = "0.3.1"
