[package]
name = "actixrustls"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.9"
log = "0.4"
# Command line application
# clap = "2.33.0"
ctrlc = "3.1"

actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20"
rustls-pemfile = "1.0.0"
