[package]
name = "actixsslproxy"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"
# Command line application
# clap = "2.33.0"
lazy_static = "1.4.0"

actix-web = { version = "3.3", features = ["openssl"] }
actix-http = "2.2"
actix-rt = "1.1"
openssl = "0.10"

# Proxy
awc = "2.0"
url = "2.2"

