[package]
name = "actixsslproxy"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.8.1"
log = "0.4.8"
# Command line application
# clap = "2.33.0"
lazy_static = "1.4.0"

actix-web = { version = "3.0.1", features = ["openssl"] }
actix-http = "2.0"
actix-rt = "2.1.0"
openssl = "0.10.28"

# Proxy
awc = "2.0.0"
url = "2.1.1"

