[package]
name = "asyncstd"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "asyncserver"
path = "src/server.rs"

[[bin]]
name = "asyncclient"
path = "src/client.rs"

[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"
# Command line application
clap = "3.0"

# TCP networking
async-std = "1.6"
