[package]
name = "hyperserver"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"
# Command line application
# clap = "2.33.0"
ctrlc = "3.1"


hyper = "0.14"
tokio = { version = "1.0", features = ["full"] }

pretty_env_logger = "0.4"
