[package]
name = "hyperssl"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.7.1"
log = "0.4.8"
# Command line application
# clap = "2.33.0"
ctrlc = "3.1.3"


hyper = "0.13.2"
tokio = { version = "0.3.0", features = ["full"] }
openssl = "0.10.28"

pretty_env_logger = "0.4.0"
