[package]
name = "tokioasync"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tokioserver"
path = "src/server.rs"

[[bin]]
name = "tokioclient"
path = "src/client.rs"

[[example]]
name = "solution2"
path = "src/solution2.rs"


[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"
# Command line application
clap = "2.33"
ctrlc = "3.1"

# TCP networking
tokio = { version = "1.0.1", features = ["rt", "macros", "process"] }
