[package]
name = "warpsslproxy"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

[[bin]]
name = "warpsslproxyhyper1"
path = "src/mainhyper1.rs"

[[bin]]
name = "warpsslproxyhyper2"
path = "src/mainhyper2.rs"

[[bin]]
name = "warpsslproxyreqwest"
path = "src/mainreqwest.rs"


[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"
chrono = "0.4"
lazy_static = "1.4"

warp = { version = "0.2", features = ["tls"] }
hyper = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
futures = "0.3"

# warp-hyper client
hyper-rustls = "0.21"
# warp-reqwest client
reqwest = { version = "0.10", features = ["stream", "gzip"] }
