[package]
name = "actixcomplex"
version = "0.2.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.7.1"
log = "0.4.8"
# Command line application
# clap = "2.33.0"
ctrlc = "3.1.3"

# Server 
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-http = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web-httpauth = "0.4.0"
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
openssl = "0.10.28"

# Serializers
serde = "1.0.104"
