[package]
name = "actixcomplex"
version = "0.2.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]
# Loggings
env_logger = "0.8"
log = "0.4"
# Command line application
# clap = "2.33.0"
ctrlc = "3.1"

# Server 
actix-web = { version = "3.1", features = ["openssl"] }
actix-http = "2.0"
actix-files = "0.5"
actix-web-httpauth = "0.5"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
openssl = "0.10"

# Serializers
serde = "1.0"

[dev-dependencies]
actix-rt = "2.2"
