[package]
name = "frontendyew"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
yew = "0.11.0"
pulldown-cmark = "0.1.2"

[profile.release]
panic = 'abort' 
codegen-units = 1 
# default 147 kB (gzipped) 
# opt-level = 'z' # 120 kB (gzipped) optimize for size more aggressively
# opt-level = 's' # 128 kB (gzipped) optimize fof size 
lto = true 